gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flocci-gateway-hr
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "flocci-service"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: flocci-service
          port: 4566
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bucket-gateway-hr
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "my-bucket"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: bucket-service
          port: 8000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: code-run-gateway-hr
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "code-runner"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: runcode-service
          port: 8000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
