ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: flocci-service
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flocci-service
                port:
                  number: 4566
    - host: my-bucket
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bucket-service
                port:
                  number: 8000
    - host: code-runner
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: runcode-service
                port:
                  number: 8000
